# the-boring-school

./: .env  .env.example  Cargo.toml  Rocket.toml  school.db
migrations/2023-01-09-144220_school/: down.sql  up.sql
src/: auth.rs  lib.rs  main.rs  models.rs  schema.rs  swagger.rs
