[package]
name = "the-boring-school"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.8", features = ["sqlite"] }
dotenvy = "0.15.6"
jsonwebtoken = { version = "8.2.0", default-features = false }
lazy_static = { version = "1.4.0", default-features = false }
okapi = "0.7.0-rc.1"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_okapi = { version = "0.8.0-rc.2", features = ["swagger"] }
rocket_sync_db_pools = { version = "0.1.0-rc.2", features = ["diesel_sqlite_pool"] }
schemars = "0.8.11"
